# clouseau

./: .gitignore  CMakeLists.txt  COVER.md  DECISIONS.md  README.md  download_gutenberg.py  requirements.txt
.github/workflows/: build.yml
include/: array_list.hpp  chunk.hpp  cli.h  cli.hpp  hashmap.hpp  indexer.h  indexer.hpp  set.hpp  trie.hpp
src/: cli.cpp  indexer.cpp  main.cpp  trie.cpp
tests/: test_array_list.cpp  test_cli.cpp  test_hash_map.cpp  test_indexer.cpp  test_set.cpp  test_trie.cpp
